--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,8 @@
                     <li><a class="button" href="/gformT/Docentes?option=''">Docentes</a></li>
                     <li><a class="button" href="/gformT/Class_horario?option=''">Class_horario</a></li>
                     
+                    <li><a class="button" href="/hform/horario?option=''">Grelha horario</a></li>
+                    
                     <li><a class="button" style="color:lightblue">User: {{ulogin}}</a></li>
                 {% endif %}
             </ul>
