--- a/templates/hform.html
+++ b/templates/hform.html
@@ -14,27 +14,30 @@
 <!-- horario -->
    <table class="tabelah">
        <tr>
-         <td><button id="previousw" type="button" {{butshow}} onclick="window.location.href = '/hform/{{cname}}?option=previousw'" class="button1"> < </button></td>
+         <td><button id="previousw" type="button" {{butshow}} onclick="window.location.href = '/hform/{{cname}}?option=previousw'" 
+                     class="button1"> < </button></td>
         
          {% for header in objh.colunas %}
-                 <th>{{header}}<br> {{objh.colunasdia[loop.index-1]}}</th>
+            <th>{{header}}<br> {{objh.colunasdia[loop.index-1]}}</th>
          {% endfor %}
-         <td><button id="nextw" type="button" {{butshow}} onclick="window.location.href = '/hform/{{cname}}?option=nextw'" class="button1"> > </button></td>
+         
+         <td><button id="nextw" type="button" {{butshow}} onclick="window.location.href = '/hform/{{cname}}?option=nextw'" 
+                     class="button1"> > </button></td>
        </tr>
-         {% for linha in objh.semanaTree %}
-          {% if loop.index-1 >= objh.horaIni and  loop.index-1 <= objh.horaFim %}
-          
-           <tr>
-           <td>{{objh.horas[loop.index-1]}}</td>
-             {% for cel in linha %}
-                
-                 <td><input type="text" value = "{{ cel.texto }}" readonly wrap="soft"  style="background-color:{{ cel.cor }}"
-                 onclick="window.location.href = '/hform/{{cname}}?option=selcel&codev={{cel.codeevent}}'" ></td>
-             {% endfor %}
-             <td>-</td>
-           </tr>
-                           {%endif%}
-                         {% endfor %}  
+        {% for linha in objh.semanaTree %}
+            {% if loop.index-1 >= objh.horaIni and  loop.index-1 <= objh.horaFim %}
+              <tr>
+                  <td>{{objh.horas[loop.index-1]}}</td>
+                    {% for cel in linha %}
+                        <td>
+                            <input type="text" value = "{{ cel.texto }}" readonly wrap="soft"  style="background-color:{{ cel.cor }}"
+                                    onclick="window.location.href = '/hform/{{cname}}?option=selcel&codev={{cel.codeevent}}'" >
+                        </td>
+                    {% endfor %}
+            <td>-</td>
+              </tr>
+            {%endif%}
+        {% endfor %}  
     </table>        
         --------------
         <table class = "dados">
@@ -103,17 +106,7 @@
                     
                 
                 </table>
-<!-- apagar 
-                {% for key in att %}
-                  <label for="{{key}}">{{des[loop.index-1]}}:</label>
-                  {% if loop.index == 1 and butedit == 'enabled' and auto_number == 1 %}
-                      <input type="text" disabled id="{{key}}" name="{{key}}" value="{{obj[key]}}" size="30"/>
-                  {%else%}                  
-                      <input type="text" {{butedit}} id="{{key}}" name="{{key}}" value="{{obj[key]}}" size="30"/>
-                  {%endif%}
-                  <br><br>
-                {% endfor %}
--->
+
         </form>
         <br>
         <button id="first" type="button" {{butshow}} onclick="window.location.href = '/hform/{{cname}}?option=first'" class="button1">First</button>
@@ -125,7 +118,7 @@
     <!-- area de lista -->
     
 		<td>
-		{{selectedcell}}
+		Lista de Events para {{selectedcell}}
 		 <table>
              
                 {% for linha in objh.eventsdiahseleted %}
